--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <header>
-        <p> Parrafo agregado por Mauricio </p>
+    <h1> Un título nuevo de prueba </h1>
+<p> Parrafo agregado por Mauricio </p>
     </header>
 </body>
 
