--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
     <h1> Un título nuevo de prueba </h1>
 <p> Parrafo agregado por Mauricio </p>
+        <p>Parrafo Agregado por Jessie</p>
     </header>
 </body>
 
