--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <h1> Un título nuevo de prueba </h1>
 <p> Parrafo agregado por Mauricio </p>
         <p>Parrafo Agregado por Jessie</p>
+        
     </header>
+    <section>
+        <button>Boton Jessie</button>
+    </section>
 </body>
 
 </html>
